@@ -1,3 +1,9 @@
+2014-07-03  Roland McGrath  <roland@hack.frob.com>
+
+	* sysdeps/unix/sysv/linux/ia64/clone2.S: Deconditionalize the code
+	that was previously under [RESET_PID].
+	* sysdeps/unix/sysv/linux/ia64/nptl/clone2.S: File removed.
+
 2014-07-07  Roland McGrath  <roland@hack.frob.com>
 
 	* sysdeps/nptl/lowlevellock.h: File removed.
